src/main/resources/templates/speedup.yaml
### Service 01
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    group: speedup
    app: service01
  name: service01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service01
  template:
    metadata:
      labels:
        app: service01
    spec:
      containers:
      - image: jackvasc/speedup
        name: service01
        ports:
        - containerPort: 8080
          name: service01
---
apiVersion: v1
kind: Service
metadata:
  labels:
    group: speedup
    app: service01
  name: service01
spec:
  selector:
    app: service01
  ports:
  - port: 8080
    targetPort: 8080
---
### Service 02
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    group: speedup
    app: service02
  name: service02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service02
  template:
    metadata:
      labels:
        app: service02
    spec:
      containers:
      - image: jackvasc/speedup
        name: service02
        ports:
        - containerPort: 8080
          name: service02
---
apiVersion: v1
kind: Service
metadata:
  labels:
    group: speedup
    app: service02
  name: service02
spec:
  selector:
    app: service02
  ports:
  - port: 8080
    targetPort: 8080
---
### Service 03
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    group: speedup
    app: service03
  name: service03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service03
  template:
    metadata:
      labels:
        app: service03
    spec:
      containers:
      - image: jackvasc/speedup
        name: service03
        ports:
        - containerPort: 8080
          name: service03
---
apiVersion: v1
kind: Service
metadata:
  labels:
    group: speedup
    app: service03
  name: service03
spec:
  selector:
    app: service03
  ports:
  - port: 8080
    targetPort: 8080
---
### Service 04
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    group: speedup
    app: service04
  name: service04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service04
  template:
    metadata:
      labels:
        app: service04
    spec:
      containers:
      - image: jackvasc/speedup
        name: service04
        ports:
        - containerPort: 8080
          name: service04
---
apiVersion: v1
kind: Service
metadata:
  labels:
    group: speedup
    app: service04
  name: service04
spec:
  selector:
    app: service04
  ports:
  - port: 8080
    targetPort: 8080
#---
#apiVersion: monitoring.coreos.com/v1
#kind: ServiceMonitor
#metadata:
#  labels:
#    group: speedup
#  name: speedup
#spec:
#  selector:
#    matchLabels:
#      group: speedup
#  namespaceSelector:
#    matchNames:
#    - default
#  endpoints:
#  - port: web
#    interval: 30s
