src/main/resources/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: speedup-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # traffic.sidecar.istio.io/includeInboundPorts: ""
    # kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/service-upstream: "true"
    # nginx.ingress.kubernetes.io/upstream-vhost: service01.default
spec:
  rules:
  - host: speedup.local.com
    http:
      paths:
      - path: /service01(/|$)(.*)
        backend:
          serviceName: service01
          servicePort: 8080
      - path: /service02(/|$)(.*)
        backend:
          serviceName: service02
          servicePort: 8080
      - path: /service03(/|$)(.*)
        backend:
          serviceName: service03
          servicePort: 8080
      - path: /service04(/|$)(.*)
        backend:
          serviceName: service04
          servicePort: 8080
