src/main/resources/templates/node-istio-internal.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service01-internal
spec:
  hosts:
    - "service01"
  http:
    - route:
        - destination:
            port:
              number: 8080
            host: service01
      # fault:
      #   delay:
      #     percent: 100
      #     fixedDelay: 5s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service02-internal
spec:
  hosts:
    - "service02"
  http:
    - route:
        - destination:
            port:
              number: 8080
            host: service02
      # fault:
      #   delay:
      #     percent: 100
      #     fixedDelay: 5s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service03-internal
spec:
  hosts:
    - "service03"
  http:
    - route:
        - destination:
            port:
              number: 8080
            host: service03
      # fault:
      #   delay:
      #     percent: 100
      #     fixedDelay: 5s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service04-internal
spec:
  hosts:
    - "service04"
  http:
    - route:
        - destination:
            port:
              number: 8080
            host: service04
      # fault:
      #   delay:
      #     percent: 100
      #     fixedDelay: 5s
